docs: add initial docs
- Add contributing guidelines.
- Add security issues guidelines.
- Add triage expectation guidelines.

Signed-off-by: Alejandro Visiedo <learning.little.engineer.2025.1@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,11 @@
 !.github/**
 !.github/**/*
 
+# Add docs directory
+!docs
+!docs/**
+!docs/**/*
+
 # Third party submodules
 !third_party
 !third_party/**
